HW16: fixed style and imports